--- a/src/styles/index.page.css
+++ b/src/styles/index.page.css
@@ -1,7 +1,12 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-Regular.ttf') format("truetype");
+}
+
 html, body {
     padding: 0;
     margin: 0;
-    font-family: sans-serif, serif;
+    font-family: sans-serif, 'Roboto';
     background: url("../wallpaper/lake-background.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -10,8 +15,17 @@ html, body {
     height: 100%;
 }
 
+.clock {
+    font-size: 80px;
+    color: white;
+}
+
 .flex {
     display: flex;
+}
+
+.flex-center {
+    justify-content: center;
 }
 
 .flex-end {
@@ -24,7 +38,7 @@ html, body {
     color: black;
     border: none;
     opacity: 0.6;
-    background-color: rgb(209 213 219);;
+    background-color: #d1d5db;
     padding: 12px;
     width: 60%;
     outline: none;
