--- a/src/styles/index.page.css
+++ b/src/styles/index.page.css
@@ -1,61 +1,56 @@
 @font-face {
     font-family: 'Roboto';
     src: url('../fonts/Roboto-Regular.ttf') format("truetype");
-}
-
-html, body {
+  }
+  
+  html,
+  body {
     padding: 0;
     margin: 0;
     font-family: sans-serif, 'Roboto';
-    background: url("../wallpaper/lake-background.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-}
-
-.clock {
+  }
+  
+  .clock {
     font-size: 80px;
     color: white;
-}
-
-.flex {
+  }
+  
+  .flex {
     display: flex;
-}
-
-.flex-center {
+  }
+  
+  .flex-center {
     justify-content: center;
-}
-
-.flex-end {
+  }
+  
+  .flex-end {
     justify-content: center;
     align-items: flex-end;
     height: 20rem;
-}
-
-.field-search {
-    font-weight: bold;
-    color: black;
+  }
+  
+  .field-search {
+    font-weight: 500;
+    color: #1F2937;
     border: none;
-    border: 1px #d1d5db00 solid;
     background-color: #d1d5db7a;
     padding: 12px;
-    width: 60%;
-    color: rgb(225, 225, 225);
+    width: 100%;
+    backdrop-filter: blur(8px);
     outline: none;
-}
-
-.field-search::placeholder {
-    color: white;
-}
-
-.text-left {
+  }
+  
+  .field-search::placeholder {
+    color: #1F2937;
+  }
+  
+  .text-left {
     text-align: left;
-}
-
-.alert-item {
+  }
+  
+  .alert-item {
     text-align: center;
     height: 70%;
     overflow: auto;
-}
+  }
+  
